--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ idna==3.4
 jmespath==1.0.1
 oauthlib==3.2.2
 Pillow==9.3.0
+psycopg2-binary==2.9.5
 pycodestyle==2.10.0
 pycparser==2.21
 PyJWT==2.6.0
