--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ django-quill-editor==0.1.40
 django-storages==1.13.2
 django-taggit==3.1.0
 django-tinymce==3.5.0
+djangorestframework==3.14.0
 factory-boy==3.2.1
 Faker==15.3.4
 gunicorn==20.1.0
@@ -30,6 +31,7 @@ PyJWT==2.6.0
 python-dateutil==2.8.2
 python-dotenv==0.21.1
 python3-openid==3.2.0
+pytz==2022.7.1
 requests==2.28.1
 requests-oauthlib==1.3.1
 s3transfer==0.6.0
