--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,10 @@ cryptography==38.0.4
 defusedxml==0.7.1
 Django==4.1.4
 django-allauth==0.51.0
+django-ckeditor==6.5.1
 django-crispy-forms==1.14.0
 django-htmx==1.13.0
+django-js-asset==2.0.0
 django-quill-editor==0.1.40
 django-storages==1.13.2
 django-taggit==3.1.0
